--- a/projeto-pronto/css-components/visit-card.component/index.html
+++ b/projeto-pronto/css-components/visit-card.component/index.html
@@ -8,6 +8,10 @@
         <link rel="stylesheet" href="style.css">
         <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"
             integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+        
+        <link href="https://fonts.googleapis.com/css?family=Raleway:700" rel="stylesheet">
+        <link href="https://fonts.googleapis.com/css?family=Lato:700" rel="stylesheet">
+
 
         <title>Document</title>
     </head>
@@ -15,36 +19,38 @@
     <body>
 
         <div class="visit-card">
+            
             <div class="left-content">
                 <div class="thumbnail">
                     <img src="55.jpg">
                 </div>
-                <div class="name-content">
-                    <small>Ms</small>
-                    <span>LOREM IPSUM</span>
+                <div class="name-surname-job">
+                    <span class="name-surname" style="font-family: 'Raleway', sans-serif;"><b>NOME SOBRENOME</b></span>
+                    </br>
+                    <span class="job" style="font-family: 'Lato', sans-serif;">PROGRAMADOR</span>
+                    <hr class="bar-left">
                 </div>
             </div>
+
             <div class="right-content">
-
-
-                <h2>INFO</h2>
                 <div class="more-info">
                     <div class="row-info">
                         <div><i class="icon fa fa-phone"></i></div>
-                        <div class="info-text"><span>(123)44453-22345</span></div>
+                        <div class="info-text"><span>(63) 9 8877-6655</span></div>
                     </div>
                     <hr>
                     <div class="row-info">
                         <div><i class="icon fa fa-envelope"></i></div>
-                        <div class="info-text"><span>loremipsum@exemple.com</span></div>
+                        <div class="info-text"><span>example@e-mail.com</span></div>
                     </div>
                     <hr>
                     <div class="row-info">
-                        <div><i class="icon fa fa-map-marker"></i></div>
-                        <div class="info-text"><span>aaaaaaa 222 bbbbbbbbbb 2222 slkdjhf sdlkjhfslkdj hslkdjfhsldkhfsl</span></div>
+                        <div><i class="icon fa fa-folder-open"></i></div>
+                        <div class="info-text"><span>github.com/project </span></div>
                     </div>
                 </div>
             </div>
+
         </div>
         <img src="ref.jpg">
     </body>
