--- a/projeto-pronto/css-components/visit-card.component/index.html
+++ b/projeto-pronto/css-components/visit-card.component/index.html
@@ -19,7 +19,7 @@
 <body>
 
     <div class="visit-card">
-
+        
         <div class="left-content">
             <div class="thumbnail">
                 <img src="55.jpg">
@@ -33,22 +33,33 @@
         </div>
 
         <div class="right-content">
-            <div class="more-info">
-                <div class="row-info">
-                    <div><i class="icon fa fa-phone"></i></div>
-                    <div class="info-text"><span>(63) 9 8877-6655</span></div>
-                </div>
-                <div class="row-info">
-                    <div><i class="icon fa fa-envelope"></i></div>
-                    <div class="info-text"><span>example@e-mail.com</span></div>
-                </div>
-                <div class="row-info">
-                    <div><i class="icon fa fa-folder-open"></i></div>
-                    <div class="info-text"><span>github.com/project </span></div>
-                </div>
-            </div>
-        </div>
-        
+            <table>
+                <tr>
+                    <td class="td-icon">
+                        <div class="icon-info"><i class="icon fa fa-phone fa-2x"></i></div>
+                    </td>
+                    <td class="td-text">
+                        <div class="text-info" style="font-family: 'Lato', sans-serif;">(63) 9 8877-6655</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-icon">
+                        <div class="icon-info"><i class="icon fa fa-envelope fa-2x"></i></div>
+                    </td>
+                    <td class="td-text">
+                        <div class="text-info" style="font-family: 'Lato', sans-serif;">example.mail@site.com</div>
+                    </td>
+                </tr>
+                <tr>
+                    <td class="td-icon">
+                        <div class="icon-info"><i class="icon fa fa-folder-open fa-2x"></i></div>
+                    </td>
+                    <td class="td-text">
+                        <div class="text-info" style="font-family: 'Lato', sans-serif;">github.com/project</div>
+                    </td>
+                </tr>
+            </table>
+        </div>    
 
     </div>
     <img src="ref.jpg">
